syntax = "proto3";


package notice.service.v1;

option go_package = "./pb";

message GetWebsocketUrlReq {
  string service = 1;
  string id = 2;
}

message GetWebsocketUrlRsp {
  string ws_url = 1;
}

service Notice {
  rpc GetWebsocketUrl(GetWebsocketUrlReq) returns (GetWebsocketUrlRsp){}

}


